# cse517-medhallu

./: .gitignore  README.md  checkpoint_results.csv  dataset_stats.py  eval_llm_performance.py  eval_models.sh  eval_results.csv  generate_data.sh  llm.py  main.py  medqa_hallucinated.csv  medqa_hallucinated_no_opt.csv  prompt.py  prompt0.py  pyproject.toml  similarity.sh  similarity_experiment.py  utils.py  variance.sh  variance_accuracy.csv  variance_category_std.csv  variance_question_stability.csv
dataset_generation/: dataset_stats.py  main.py  medhallu_dataset_labeled.csv
eval/: eval_llm_performance.py  eval_results_no_opt.csv
similarity_experiment/: cluster_proximity_results.csv  cluster_proximity_summary.csv  similarity_experiment.py
tests/: test_integration.py  test_real_api.py  test_utils.py
variance_abalation/: variance_analysis.py  variance_category_distribution.csv  variance_difficulty_distribution.csv  variance_difficulty_std.csv  variance_run_1.csv  variance_run_11.csv  variance_run_12.csv  variance_run_15.csv  variance_run_16.csv  variance_run_17.csv  variance_run_18.csv  variance_run_5.csv  variance_run_8.csv
variance_abalation/runs/: variance_run_10.csv  variance_run_13.csv  variance_run_14.csv  variance_run_19.csv  variance_run_2.csv  variance_run_20.csv  variance_run_3.csv  variance_run_4.csv  variance_run_6.csv  variance_run_7.csv  variance_run_9.csv
