[project]
name = "cse517-medhallu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=1.2.1",
    "dotenv>=0.9.9",
    "fsspec>=2026.2.0",
    "huggingface-hub>=1.4.1",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]
