[project]
name = "cse517-medhallu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=1.2.1",
    "dotenv>=0.9.9",
    "fsspec>=2023.1.0",
    "huggingface-hub>=1.4.1",
    "openai>=2.21.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.3",
    "textgrad>=0.1.8",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
